--- a/src/RentalNorth/Views/Home/Index.cshtml
+++ b/src/RentalNorth/Views/Home/Index.cshtml
@@ -1,9 +1,24 @@
 ﻿@{
     ViewData["Title"] = "Start";
 }
-<script src="~/js/angular.min.js"></script>
+
 <div ng-controller="homeController">
-    <ul>
-        <li ng-repeat="x in products">{{x}}</li>
-    </ul>
+    <div class="jumbotron">
+        <div class="container text-center">
+            <h1>Välkommen!</h1>
+            <form class="form-inline">
+                <div class="form-group">
+                    <div class="input-group input-group-lg">
+                        <input type="text" class="form-control" placeholder="Var vill du hyra stuga?">
+                        <span class="input-group-btn">
+                            <button class="btn btn-primary" type="button">Var?</button>
+                        </span>
+                    </div>
+                </div>
+            </form>
+            <br />
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5251884.380211273!2d18.32315805147351!3d62.96836300393261!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ssv!2sde!4v1460532608181"
+                     width="100%" height="500" frameborder="0" style="border:1px solid #666" allowfullscreen></iframe>
+        </div>
+    </div>
 </div>
