--- a/src/RentalNorth/Views/Home/About.cshtml
+++ b/src/RentalNorth/Views/Home/About.cshtml
@@ -5,3 +5,12 @@
 <h3>@ViewData["Message"]</h3>
 
 <p>Välkommen till Rental North</p>
+<script>
+    $(document).ready(function () {
+        $.getJSON("/api/AllCabins",null, function (cabinsJson) {
+            //var obj = JSON.parse(cabinsJson);
+            alert(cabinsJson[0].Title + " " + cabinsJson[1].Title);
+
+            });
+        });
+</script>
