--- a/src/RentalNorth/Views/Shared/_Layout.cshtml
+++ b/src/RentalNorth/Views/Shared/_Layout.cshtml
@@ -6,8 +6,10 @@
         <title>@ViewData["Title"] - RentalNorth</title>
 
         <environment names="Development">
+            <script src="~/js/angular.min.js"></script>
             <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
             <link rel="stylesheet" href="~/css/site.css" />
+            <script src="~/lib/jquery/dist/jquery.js"></script>
         </environment>
         <environment names="Staging,Production">
             <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css"
@@ -47,7 +49,7 @@
         </div>
 
         <environment names="Development">
-            <script src="~/lib/jquery/dist/jquery.js"></script>
+            @*<script src="~/lib/jquery/dist/jquery.js"></script>*@
             <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
             <script src="~/js/site.js" asp-append-version="true"></script>
         </environment>
