--- a/src/RentalNorth/Views/Shared/_Layout.cshtml
+++ b/src/RentalNorth/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         <script src="~/js/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28//angular-route.min.js"></script>
     </environment>
 </head>
 <body>
@@ -33,11 +34,11 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a asp-controller="Home" asp-action="Index">Hem</a></li>
-                        <li><a asp-controller="Home" asp-action="Rent">Hyra stuga</a></li>
-                        <li><a asp-controller="Home" asp-action="Renter">Hyra ut stuga</a></li>
-                        <li><a asp-controller="Home" asp-action="About">Om oss</a></li>
-                        <li><a asp-controller="Home" asp-action="Contact">Kontakta oss</a></li>
+                        <li><a href="~#/home">Hem</a></li>
+                        <li><a href="~#/rent">Hyra stuga</a></li>
+                        <li><a href="~#/renter">Hyra ut stuga</a></li>
+                        <li><a href="~#/about">Om oss</a></li>
+                        <li><a href="~#/contact">Kontakta oss</a></li>
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
                 </div>
