--- a/src/RentalNorth/Views/Shared/_LoginPartial.cshtml
+++ b/src/RentalNorth/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,9 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-controller="Account" asp-action="Register">Register</a></li>
-        <li><a asp-controller="Account" asp-action="Login">Log in</a></li>
+        <li><a target="_self" href="~/Account/register/">Register</a></li>
+        <li><a target="_self" href="~/Account/Login/">Log in</a></li>
     </ul>
 }
+@*<
+    a href="~/views/shared/_loginpartial.cshtml">~/views/shared/_loginpartial.cshtml</a>*@
