--- a/src/RentalNorth/Views/Shared/_Layout.cshtml
+++ b/src/RentalNorth/Views/Shared/_Layout.cshtml
@@ -1,14 +1,19 @@
 ﻿<!DOCTYPE html>
-<html ng-app="rentalNorth">
+<html ng-app="myApp">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - RentalNorth</title>
 
     <environment names="Development">
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
         <script src="~/js/angular.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28//angular-route.min.js"></script>
+        <script src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBePigxritR2WPo6NxLFF8q_EvcqiFncXc"></script>
+        <script src="~/js/site.js"></script>
     </environment>
     <environment names="Staging,Production">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css"
@@ -34,42 +39,45 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="~#/home">Hem</a></li>
-                        <li><a href="~#/rent">Hyra stuga</a></li>
-                        <li><a href="~#/renter">Hyra ut stuga</a></li>
-                        <li><a href="~#/about">Om oss</a></li>
-                        <li><a href="~#/contact">Kontakta oss</a></li>
+                        <li><a onclick="clearRenderBody()" href="~/#/home">Hem</a></li>
+                        <li><a onclick="clearRenderBody()" href="~/#/rent">Hyra stuga</a></li>
+                        <li><a onclick="clearRenderBody()" href="~/#/renter">Hyra ut stuga</a></li>
+                        <li><a onclick="clearRenderBody()" href="~/#/about">Om oss</a></li>
+                        <li><a onclick="clearRenderBody()" href="~/#/contact">Kontakta oss</a></li>
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
                 </div>
             </div>
         </div>
-        </div>
-        <div class="container body-content">
+    </div>
+    <div class="container body-content">
+        <div id="ngview" ng-view></div>
+        <div id="renderBody">
             @RenderBody()
-            <hr />
-            <footer>
-                <p>&copy; 2016 - RentalNorth</p>
-            </footer>
         </div>
+        <hr />
 
-        <environment names="Development">
-            <script src="~/lib/jquery/dist/jquery.js"></script>
-            <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-            <script src="~/js/site.js" asp-append-version="true"></script>
-        </environment>
-        <environment names="Staging,Production">
-            <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.1.4.min.js"
-                    asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                    asp-fallback-test="window.jQuery">
-            </script>
-            <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/bootstrap.min.js"
-                    asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                    asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
-            </script>
-            <script src="~/js/site.min.js" asp-append-version="true"></script>
-        </environment>
 
-        @RenderSection("scripts", required: false)
+        <footer>
+            <p>&copy; 2016 - RentalNorth</p>
+        </footer>
+    </div>
+
+    <environment names="Development">
+
+    </environment>
+    <environment names="Staging,Production">
+        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.1.4.min.js"
+                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+                asp-fallback-test="window.jQuery">
+        </script>
+        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/bootstrap.min.js"
+                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
+        </script>
+        <script src="~/js/site.min.js" asp-append-version="true"></script>
+    </environment>
+
+    @RenderSection("scripts", required: false)
 </body>
 </html>
